# inretensys-backend

./: .dockerignore  .gitignore  Dockerfile  Doxyfile  LICENSE.txt  README.md  build.sh  cbc_dockerfile  dockerfile  gurobi_dockerfile  main.py  mkdocs.yml  printresults.py  pyproject.toml  requirements.txt  requirements_pip.txt  setup.py  tests.sh  verfication.py
.github/workflows/: Generate Coverage Report.yml  codacy-coverage-report.yml  coverage-report.yml  generate-coverage-report.yml
InRetEnsys/: __init__.py  modelbuilder.py  types.py
configs/: allround_sample.py  basic_sample.py  basicexample.py  modified_sample.py  oemof_allround_sample.py  oemof_sample.py
docs/: about.md  index.md  release-notes.md
dumps/: energySystem.dump  energy_system 2.dump  energy_system.dump  energy_system_orig 2.dump  energy_system_orig.dump
ensys/: __init__.py  config.py  modelbuilder.py  systembuilder.py  types.py
examples/: ensys_allround1_cbc.json  ensys_allround1_config.json  ensys_allround1_cplex.json  ensys_allround1_gurobi.json  ensys_allround2_config.json  ensys_allround2_gurobi.json  ensys_allround3_config.json  ensys_allround3_gurobi.json  ensys_basic_config.json  ensys_basic_cplex.json  ensys_basic_gurobi.json
hsncommon/: config.py  log.py  mqtt.py  pattern.py  ssh.py  thread.py  types.py
images/: energy_system
output/: ensys_out.txt  oemof_out.txt
test/: components_tests.py
testdata/: ensys_allround1_config.json
tests/: allround.py  common_tests.py  components.py  components_tests.py  create_binaries.py  simulations.py  swe.py  swe_output.py
(+591 files in other folders)
